[project]
name = 'antibody-epitope-analyzer'
version = "0.0.3"
authors = [
    {name="Jose Luis Cruz, Jr.", email="jtpgmr@gmail.com" }
]
description = "Project that downloads epitope data from IEDB, for a given antigen, downloads the fasta sequence files and analyzes conserved sequences."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
