[project]
name = 'antibody-epitope-analyzer'
version = "0.0.3"
authors = [
    {name="Jose Luis Cruz, Jr.", email="jtpgmr@gmail.com" }
]
description = "Project that downloads epitope data from IEDB, for a given antigen, generates .fasta files containing the amino acid sequences and detects conserved regions."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
